--- a/TodosTestProject/appsettings.json
+++ b/TodosTestProject/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=TodoDB;User Id=db_den1;Password=den;TrustServerCertificate=true"
+
+  },
   "AllowedHosts": "*"
 }
