--- a/Users.Service/Users.Service.csproj
+++ b/Users.Service/Users.Service.csproj
@@ -28,8 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Application\Common.Application.csproj" />
     <ProjectReference Include="..\Common.Domain\Common.Domain.csproj" />
-    <ProjectReference Include="..\Common.Repositories\Common.Repositories.csproj" />
+    <ProjectReference Include="..\UserApplication\UserApplication.csproj" />
   </ItemGroup>
 
 </Project>
