--- a/Todos.Service/Todos.Service.csproj
+++ b/Todos.Service/Todos.Service.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TodoAplication\TodoAplication.csproj" />
     <ProjectReference Include="..\Users.Service\Users.Service.csproj" />
   </ItemGroup>
 
