added memory cache and transactions

--- a/Users.Api/Users.Api.csproj
+++ b/Users.Api/Users.Api.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Auth\Auth.Api.csproj" />
     <ProjectReference Include="..\Common.Api\Common.Api.csproj" />
     <ProjectReference Include="..\UserApplication\UserApplication.csproj" />
   </ItemGroup>
