--- a/TodoAplication/TodoAplication.csproj
+++ b/TodoAplication/TodoAplication.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common.Application\Common.Application.csproj" />
     <ProjectReference Include="..\Common.Domain\Common.Domain.csproj" />
+    <ProjectReference Include="..\UserApplication\UserApplication.csproj" />
   </ItemGroup>
 
 </Project>
