--- a/TodosTestProject/Todos.Api.csproj
+++ b/TodosTestProject/Todos.Api.csproj
@@ -29,10 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Auth\Auth.Api.csproj" />
     <ProjectReference Include="..\Common.Api\Common.Api.csproj" />
     <ProjectReference Include="..\Common.Domain\Common.Domain.csproj" />
-    <ProjectReference Include="..\Todos.Repositories\Todos.Repositories.csproj" />
-    <ProjectReference Include="..\Todos.Service\Todos.Service.csproj" />
+    <ProjectReference Include="..\TodoAplication\TodoAplication.csproj" />
     <ProjectReference Include="..\Users.Api\Users.Api.csproj" />
   </ItemGroup>
 
